fix(list): correctly displays ellipsis when overflowing

--- a/packages/ketchup-lite/src/components/kul-list/kul-list.scss
+++ b/packages/ketchup-lite/src/components/kul-list/kul-list.scss
@@ -249,6 +249,10 @@
       width: 1.5em;
     }
   }
+
+  &__text {
+    overflow: hidden;
+  }
 }
 
 .empty-data {
